fixed bug on SeasonInfoCard where image not loading would shift other contents

--- a/src/components/layout/SeriesInfoPage/Tabs/SeasonTab/SeasonTab.css
+++ b/src/components/layout/SeriesInfoPage/Tabs/SeasonTab/SeasonTab.css
@@ -12,6 +12,7 @@
     border-radius: 10px;
     height: 100%;
     width: auto;
+    min-width: 11%;
 }
 
 
